--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 70vw;
     max-height: 100vh;
@@ -111,8 +111,10 @@ Articles----------------------------------------------------
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 22.45vw;
-    height: 25vw;
+    width: 50%;
+    min-width: 33.33%;
+    max-width: 100%;
+    height: 50vh;
     background: url("/img/jfs.jpg")  no-repeat left;
 }
 
@@ -132,8 +134,11 @@ Articles----------------------------------------------------
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 22vw;
-    height: 25vw;
+    width: 50%;
+    min-width: 33.33%;
+    max-width: 100%;
+    min-height: 50%;
+    height: 50vh;
     background-color: rgb(240, 255, 71);
     background: url("/img/calculator.jpg") no-repeat right;
     background-size: cover;
@@ -155,8 +160,11 @@ Articles----------------------------------------------------
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 22vw;
-    height: 25vw;
+    width: 100%;
+    min-width: 33.33%;
+    max-width: 100%;
+    min-height: 50%;
+    height: 55vh;
     background-color: tomato;
     background: url("/img/notepad.jpg") no-repeat center;
     background-size: cover;
@@ -178,8 +186,8 @@ Articles----------------------------------------------------
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70vw;
-    height: 51vh;
+    min-width: 100%;
+    height: 51%;
     background-color: #141726;
     background: url("/img/code.jpg") no-repeat center;
 }
@@ -221,8 +229,31 @@ Articles----------------------------------------------------
     }
     
     /*----------------------------------------------------    */
-    #work .work_jhonfs {width: 50vw; height: 40vh;}
-    #work .work_calculator-jar {width: 50vw; height: 40vh;}
-    #work .work_notepad-jar {width: 50vw; height: 40vh;}
-    #work .work_coomingsoon {width: 50vw; height: 40vh;}
+    #work .work_jhonfs {        
+        min-width: none;
+        max-width: none;
+        min-height: none;
+        width: 50vw;
+        height: 50vW;
+       }
+
+    #work .work_calculator-jar {        
+        min-width: none;
+        max-width: none;
+        min-height: none;
+        width: 50vw;
+        height: 50vW;
+       }
+
+    #work .work_notepad-jar {        
+    min-width: none;
+    max-width: none;
+    min-height: none;
+    width: 50vw;
+    height: 50vW;
+    }
+
+    #work .work_cooming-soon {
+        display: none;
+    }
 }
