--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
     align-items: flex-end;
     background:url("/img/bg_header.jpg") no-repeat;
     background-size: cover;
-    width: 30rem;
+    width: 30vw;
     min-width: 20rem;
     height: 100vh;
 }
