--- a/css/blog.css
+++ b/css/blog.css
@@ -43,9 +43,7 @@ hr {
     margin-bottom: 0;
 }
 
-.header_blog_ajust {
-    padding: 15px 3vw;
-}
+.header_blog_ajust {padding: 15px 3vw;}
 
 #navbar_header {
     display: flex;
@@ -63,13 +61,9 @@ hr {
     transition:all 0.5s ease-in-out;
 }
 
-#navbar_header a:hover{
-    border-top: dotted 4px;
-}
+#navbar_header a:hover{border-top: dotted 4px;}
 
-.back-up{
-    margin-right: 0.5rem;
-}
+.back-up{margin-right: 0.5rem;}
 
 .nav_article {
     display: flex;
@@ -101,6 +95,15 @@ hr {
     padding: 0.5rem;
 }
 
+.article_content img {max-width: 50vw;}
+
+.cod {
+    padding: 1rem;
+    background-color: #100d26;
+    border-left: solid 5px #02732A;
+    border-radius: 10px;
+    color: #04BF33;
+}
 
 #author {
     display: flex;
@@ -124,23 +127,19 @@ footer {
     margin-top: 2rem;
 }
 
-footer p {
-    margin: 0;
-}
+footer p {margin: 0;}
 
 @media screen and (max-width: 780px) {
     
-    #header_blog p {
-        display: none;
-    }
+    #header_blog p {display: none;}
 
     .default_article {
         max-width: 95vw;
         margin: auto;
     }
 
-    #navbar_header {
-        margin-right: 2vw;
-    }
+    #navbar_header {margin-right: 2vw;}
+
+    .article_content img {max-width: 95vw;}
     
 }
