--- a/css/blog.css
+++ b/css/blog.css
@@ -18,6 +18,7 @@ body{background-color: #242326;}
 
 #myBlog {
     background-color: transparent;
+    text-decoration: none;
     color: #00fc4c;
     width: 15vw;
     height: 3rem;
