--- a/css/blog.css
+++ b/css/blog.css
@@ -12,37 +12,27 @@ body{background-color: #242326;}
 /*Start Header*/
 #header {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 70vw;
+    height: 6rem;
     font-family: 'Silkscreen', cursive;
-    margin-bottom: 1rem;
-}
-
-#myBlog {
-    background-color: transparent;
     text-decoration: none;
+}
+
+#logo {
+    display: flex;
+    align-items: center;
     color: #00fc4c;
-    width: 15vw;
-    height: 3rem;
-    cursor: pointer;
-    transition: all 0.5s ease-in-out;
-}
-
-#myBlog:hover {
-    background-color: #00fc4c;
-    color:#242326;
-}
-
-#myBlog h1 {margin: 0.4rem 0 0 2vw;}
-
-#menu {
-    width: 55vw;
-    max-height: 3rem;
+    text-decoration: none;
+    margin: 0;
+    padding: 0 0 0 1rem;
+    height: 6rem;
+    width: 8rem;
 }
 
 #menu ul {
     display: flex;
-    justify-content: flex-end;
-    margin: 0;
-    padding: 0;
 }
 
 #menu li {
@@ -50,16 +40,24 @@ body{background-color: #242326;}
 }
 
 #menu a {
-    display: inline-block;
     color: #FFFBF2;
-    text-decoration: none;
-    padding: 1rem 0.5rem;
-    transition: all 0.3s ease-in-out;
+    padding: 1rem 0.6rem;
+    transition: all 0.5s ease-in-out;
 }
 
 #menu a:hover {
-    background-color: #00fc4c;
-    color:#242326;
+    color: #00fc4c;
+}
+
+.menu__text {
+    display: inline-block;
+    align-items: centers;
+    font-size: 1rem;
+}
+
+.menu__icon {
+    display: none;
+    font-size: 1.6rem;
 }
 /*End Header*/
 
@@ -135,24 +133,23 @@ footer span { color: #00fc4c;}
         width: 100vw;
     }
     /*Start Header*/
-    #header {flex-direction: column;}
-    
-    #myBlog {
-        width: 100vw;
-        text-align: center;
-        color: #00fc4c;
-        background-color: #242326;
+    #header {
+        justify-content: space-between;
+        max-width: 100vw;
     }
 
-    #myBlog:hover{color:#242326}
-    
     #menu {
-        background-color: #242326;
-        width: 100vw;
-        margin: 0 auto;
+        margin-right: 1rem;
     }
-    
-    #menu ul {justify-content: center;}
+
+    .menu__text {
+        display: none;
+    }
+
+    .menu__icon {
+        display: inline-block;
+        font-size: 1.6rem;
+    }
     /*End Header*/
 
     /*Start Main*/
