--- a/css/post.css
+++ b/css/post.css
@@ -46,6 +46,7 @@
     padding: 1rem;
     border-radius: 0.5rem;
     font-size: 0.9rem;
+    text-align: left;
 }
 
 @media screen and (max-width: 900px){
