--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -116,3 +116,35 @@
     width: 50vw !important;
     margin: 1rem auto !important;
 }
+
+@media screen and (max-width: 800px) {
+    #blog h1 {
+        margin-top: 6rem;
+    }
+
+    #blog section {
+        margin-bottom: 2rem;
+    }
+
+    #blog article {
+        max-width: 100vw;
+        width: 95vw;
+        padding-bottom: 3rem;
+    }
+
+    #blog article .content h2 {
+        font-size: 1.8rem;
+    }
+
+    #blog article .content p {
+        font-size: 1rem;
+    }
+
+    #article {
+        max-width: 90vw;
+    }
+
+    #article .quote {
+        width: 80vw !important;
+    } 
+}
