--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -39,7 +39,7 @@
 }
 
 #blog section {
-    margin: 0 auto 2rem;
+    margin: auto;
 }
 
 #blog h3 {
@@ -53,7 +53,6 @@
     width: 50vw;
     margin: 1rem auto;
     display: flex;
-    padding-right: 1rem;
 }
 
 #blog article:hover {
@@ -67,7 +66,7 @@
 }
 
 #blog article .content {
-    margin-left: 1rem;
+    padding: 0 1rem;
 }
 
 #blog article .content h2 {
@@ -126,24 +125,39 @@
 @media screen and (max-width: 800px) {
     #blog h1 {
         margin-top: 6rem;
+        font-size: 2.9rem;
     }
 
     #blog section {
         margin-bottom: 2rem;
     }
 
+    #blog article .content {
+        padding: 0 .5rem;
+    }
+
+    #blog article img {
+        width: 8rem;
+    }
+
     #blog article {
         max-width: 100vw;
         width: 95vw;
-        padding-bottom: 3rem;
+        margin: 1.5rem auto;
+        box-shadow: 0 0 2px var(--color-secondary);
+        border-radius: 10px;
+    }
+
+    #blog article:hover {
+        box-shadow: 0 0 3px var(--color-secondary);
     }
 
     #blog article .content h2 {
-        font-size: 1.8rem;
+        font-size: 1.1rem;
     }
 
     #blog article .content p {
-        font-size: 1rem;
+        font-size: .9rem;
     }
 
     #article {
