--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -31,7 +31,7 @@
 }
 
 #blog-hr {
-    width: 98vw;
+    max-width: 98vw;
     margin: auto;
     margin-bottom: 2rem;
     border-color: var(--color-menu);
@@ -115,6 +115,10 @@
     margin: 1rem auto !important;
 }
 
+#blog section {
+    margin-bottom: 2rem;
+}
+
 @media screen and (max-width: 1000px) {
     #blog article {
         max-width: 70vw;
@@ -126,10 +130,6 @@
     #blog h1 {
         margin-top: 6rem;
         font-size: 2.9rem;
-    }
-
-    #blog section {
-        margin-bottom: 2rem;
     }
 
     #blog article .content {
@@ -166,5 +166,5 @@
 
     #article .quote {
         width: 80vw !important;
-    } 
+    }
 }
