--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,10 @@ hr {max-width: 97vw !important;}
     max-width: 50vw;
 }
 
+#about .text-text p{
+    margin-bottom: 1rem;
+}
+
 #about h1 {
     color: var(--color-primary);
     margin: 0 1rem 0;
@@ -245,14 +249,20 @@ hr {max-width: 97vw !important;}
         margin: 6rem 0 0;
     }
 
+    #about {
+        flex-direction: column-reverse;
+        gap: 2rem;
+    }
+
     #about .text {
         max-width: 100vw;
         width: 100vw;
+        align-items: center;
     }
 
     #about h1 {
         color: var(--color-primary);
-        margin-left: .5rem;
+        margin-left: 0;
         font-size: 2rem;
     }
 
@@ -265,7 +275,7 @@ hr {max-width: 97vw !important;}
 
     #about p {
         font-size: 1rem;
-        margin-left: .5rem;
+        text-align: left;
     }
 
     #about .div-icon {
@@ -277,7 +287,7 @@ hr {max-width: 97vw !important;}
     }
 
     #about img {
-        display: none;
+        max-width: 60vw;
     }
 
     /* portfolio
@@ -299,5 +309,9 @@ hr {max-width: 97vw !important;}
 
     #portfolio .text {
         display: none;
+    }
+
+    #portfolio .cards {
+        grid-template-columns: 1fr 1fr;
     }
 }
