--- a/css/style.css
+++ b/css/style.css
@@ -188,12 +188,13 @@ hr {max-width: 97vw !important;}
 
 #portfolio .cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr;
 }
 
 #portfolio .card img {
     max-width: 100%;
+    min-width: 100%;
 }
 
 #portfolio .card {
@@ -205,17 +206,35 @@ hr {max-width: 97vw !important;}
     position: absolute;
     z-index: 2;
     bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: var(--color-primary);
     width: 100%;
+    height: 50%;
+    padding: 3rem 0;
     text-align: center;
-    padding: 1rem 0;
-    opacity: 0.3;
+    opacity: 0;
     color: var(--color-bg);
 }
 
 #portfolio .text:hover {
-    padding: 5rem 0 2rem;
     opacity: .9;
+    background-color: var(--color-menu);
+    height: calc(100% - 6rem);
+}
+
+#portfolio .text h2 {
+    font-size: 2rem;
+    color: var(--color-secondary);
+}
+
+#portfolio .text p {
+    width: 70%;
+    text-align: center;
+    margin: .4rem auto 0;
+    font-size: 1.2rem;
 }
 
 @media screen and (max-width: 800px) {
