--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -13,6 +13,7 @@
 *******/
 * {
     font-family: 'Playfair Display', serif;
+    font-weight: 500;
 }
 
 
@@ -103,6 +104,7 @@
     font-size: 1.1rem;
     text-align: justify;
     color: var(--color-primary);
+    margin-top: 0.5rem;
 }
 
 #article a {
