--- a/css/style.css
+++ b/css/style.css
@@ -327,10 +327,21 @@ hr {max-width: 97vw !important;}
     }
 
     #portfolio .text {
-        display: none;
+        width: 100%;
+        height: 30%;
+        padding: 1rem 0;
+        opacity: .9;
+        color: var(--color-bg);
+        background-color: var(--color-menu);
+    }
+
+    #portfolio .text:hover {
+        opacity: .9;
+        background-color: var(--color-menu);
+        height: calc(100% - 2rem);
     }
 
     #portfolio .cards {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(1, 1fr);
     }
 }
