--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,8 @@ hr {max-width: 97vw !important;}
 #portfolio .cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 1fr;
+    grid-auto-rows: auto;
+    gap: 0 0.3rem ;
 }
 
 #portfolio .card img {
@@ -210,19 +211,17 @@ hr {max-width: 97vw !important;}
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--color-primary);
     width: 100%;
-    height: 50%;
+    height: 60%;
     padding: 3rem 0;
     text-align: center;
     opacity: 0;
-    color: var(--color-bg);
+    background-color: var(--color-menu);
 }
 
 #portfolio .text:hover {
-    opacity: .9;
-    background-color: var(--color-menu);
     height: calc(100% - 6rem);
+    opacity: .9;
 }
 
 #portfolio .text h2 {
@@ -235,6 +234,7 @@ hr {max-width: 97vw !important;}
     text-align: center;
     margin: .4rem auto 0;
     font-size: 1.2rem;
+    color: var(--color-primary);
 }
 
 @media screen and (max-width: 800px) {
@@ -327,21 +327,29 @@ hr {max-width: 97vw !important;}
     }
 
     #portfolio .text {
-        width: 100%;
         height: 30%;
-        padding: 1rem 0;
-        opacity: .9;
-        color: var(--color-bg);
-        background-color: var(--color-menu);
+        padding: 2rem 0;
+        font-size: 1rem;
+        opacity: 0.9;
     }
 
     #portfolio .text:hover {
-        opacity: .9;
-        background-color: var(--color-menu);
-        height: calc(100% - 2rem);
+        height: 30%;
+        opacity: 0.9;
     }
 
     #portfolio .cards {
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    #portfolio .text p {
+        width: 95%;
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    #portfolio .card img {
+        height: calc(25vw - 0.3rem);
     }
 }
