--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -1,172 +1,166 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
     --color-bg:#f8f8f8;
-    --color-menu:#7D7A67;
+    --color-menu:#77A656;
     --color-primary:#2d2933;
     --color-secondary:#181818;
 }
 
-/* all
-*******/
-* {
-    font-family: 'Playfair Display', serif;
-    font-weight: 500;
+* { font-family: 'Raleway', sans-serif; }
+
+#blog {
+    max-width: 81vw;
+    margin: 2rem auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 1vw;
 }
 
-
-
-/* blog
-*******/
-#body-blog {
-    background-color: var(--color-bg);
-}
-
-#blog h1 {
-    font-size: 3.5rem;
-    text-align: center;
-    color: var(--color-primary);
-    margin: 3rem 0;
-}
-
-#blog-hr {
-    max-width: 98vw;
-    margin: auto;
+#side-bar {
+    width: 81vw;
+    max-width: 81vw;
+    margin: 2.6rem auto;
     margin-bottom: 2rem;
-    border-color: var(--color-menu);
-    opacity: .4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-#blog section {
-    margin: auto;
-}
-
-#blog h3 {
+#side-bar h3 {
+    font-size: 3rem;
+    color: var(--color-secondary);
+    padding-bottom: .5rem;
     text-align: center;
-    color: var(--color-primary);
-    margin-bottom: 1rem;
-    font-size: 2rem;
 }
 
-#blog article {
-    max-width: 50vw;
-    width: 50vw;
-    margin: 1rem auto;
+#side-bar hr {
+    margin-bottom: .9rem;
+    animation: hr 2s ease-in-out 0s ;
+    width: 100%;
+}
+
+@keyframes hr {
+    0% {
+        width: 1px;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+#side-bar .div-icon {
     display: flex;
 }
 
-#blog article:hover {
-    box-shadow: 0 0 5px var(--color-secondary);
-    border-radius: 10px;
-}
-
-#blog article img {
-    width: 13rem;
-    border-radius: 10px 0 0 10px;
-}
-
-#blog article .content {
-    padding: 0 1rem;
-}
-
-#blog article .content h2 {
-    font-size: 2rem;
-    margin: 1rem 0;
+#side-bar a {
     color: var(--color-secondary);
+    font-size: 1.5rem;
+    padding: 0 0.5rem;
 }
 
-#blog article .content p {
-    font-size: 1.1rem;
-    margin-bottom: 1rem;
+#side-bar a:hover {
     color: var(--color-primary);
-    text-align: justify;
+    opacity: .8;
 }
 
-#blog article .content .date {
-    font-size: .9rem;
-    
+#articles {
+    max-width: 70vw;
+    width: 70vw;
+    background-color: var(--color-primary);
+    padding: 1rem;
+    border-radius: 10px;
+    opacity: .9;
 }
+
+article {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 1rem;
+    color: var(--color-bg);
+    border-left: dotted 2px var(--color-bg);
+    padding: .5rem 0;
+    transition: padding .3s ease-in;
+}
+
+article:hover {
+    color: var(--color-menu);
+    border-left: solid 2px var(--color-menu);
+    padding-left: 1rem;
+}
+
+article .date {
+    color: var(--color-bg);
+    white-space: nowrap;
+    font-weight: 400;
+    padding-left: 1rem;
+}
+
+article p {
+    font-weight: 500;
+}
+
+img {
+    max-width: 100%;
+}
+
+/**************************************************/
 
 #article {
-    max-width: 60vw;
-    margin: auto;
-    text-align: justify;
+    color: var(--color-primary);
+    max-width: 650px;
 }
 
-#title-article {
+#article h3 {
+    text-align: center;
+    margin-bottom: 1rem;
     font-size: 1.5rem;
-    color: var(--color-primary);
-    margin-bottom: 2rem;
+}
+
+#article hr {
+    margin-bottom: 1rem;
 }
 
 #article .text-article {
-    font-size: 1.1rem;
+    margin-bottom: .5rem;
     text-align: justify;
-    color: var(--color-primary);
-    margin-top: 0.5rem;
+    font-weight: 500;
+}
+
+#article .quote {
+    max-width: 90%;
+    margin: 0 auto .5rem;
+    font-weight: 400;
 }
 
 #article a {
     color: var(--color-primary);
-    text-decoration: none;
+    display: inline-block;
+    margin-bottom: .3rem;
 }
 
-#article .quote {
-    width: 50vw !important;
-    margin: 1rem auto !important;
-}
-
-#blog section {
-    margin-bottom: 2rem;
-}
-
-@media screen and (max-width: 1000px) {
-    #blog article {
-        max-width: 70vw;
-        width: 70vw;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    #blog h1 {
-        margin-top: 6rem;
-        font-size: 2.9rem;
+@media screen and (max-width: 900px) {
+    #blog {
+        max-width: 90vw;
+        margin: auto;
+        margin-top: 2rem;
+        align-items: center;
     }
 
-    #blog article .content {
-        padding: 0 .5rem;
-    }
-
-    #blog article img {
-        width: 8rem;
-    }
-
-    #blog article {
+    #side-bar {
+        width: 100vw;
         max-width: 100vw;
-        width: 95vw;
-        margin: 1.5rem auto;
-        box-shadow: 0 0 2px var(--color-secondary);
-        border-radius: 10px;
-    }
-
-    #blog article:hover {
-        box-shadow: 0 0 3px var(--color-secondary);
-    }
-
-    #blog article .content h2 {
-        font-size: 1.1rem;
-    }
-
-    #blog article .content p {
-        font-size: .9rem;
+        margin: 0;
+        margin-top: 2.6rem;
+        margin-bottom: 2rem;
     }
 
     #article {
-        max-width: 90vw;
-    }
-
-    #article .quote {
-        width: 80vw !important;
+        margin: auto;
     }
 }
