--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -1,13 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 :root {
     --color-bg:#f8f8f8;
     --color-menu:#77A656;
     --color-primary:#2d2933;
     --color-secondary:#181818;
 }
-
-* { font-family: 'Raleway', sans-serif; }
 
 #blog {
     max-width: 81vw;
@@ -44,12 +40,12 @@
 }
 
 @keyframes hr {
-    0% {
-        width: 1px;
+    to {
+        width: 100%;
     }
 
-    100% {
-        width: 100%;
+    from {
+        width: 0%;
     }
 }
 
@@ -73,8 +69,11 @@
     width: 70vw;
     background-color: var(--color-primary);
     padding: 1rem;
-    border-radius: 10px;
-    opacity: .9;
+    border-radius: 10px;   
+}
+
+#articles hr {
+    margin: .5rem 0;
 }
 
 article {
@@ -101,6 +100,43 @@ article .date {
     padding-left: 1rem;
 }
 
+#article .topic-h1{
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-bottom: .8rem;
+}
+
+#article .topic-h2 {
+    font-size: 1.1rem;
+    font-weight: 700;
+    margin: .6rem 0;
+}
+
+#article .topic-h3 {
+    font-size: 1rem;
+    font-weight: 700;
+    margin: .6rem 0;
+}
+
+#article ul,
+#article ol {
+    margin-left: 2rem;
+}
+
+.two-column {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+}
+
+.three-column {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+}
+
+.text-article a {
+    text-decoration:underline;
+}
+
 article p {
     font-weight: 500;
 }
@@ -109,7 +145,21 @@ img {
     max-width: 100%;
 }
 
-/**************************************************/
+.btn-download {
+    display: block !important;
+    text-align: center;
+    padding: .5rem 0;
+    width: 70%;
+    margin: auto;
+    border: dotted 1px var(--color-primary);
+    box-shadow: -5px 5px 0 var(--color-menu);
+    margin-bottom: 1.5rem !important;
+    transition: all .3s ease-in;
+}
+
+.btn-download:hover {
+    box-shadow: none;
+}
 
 #article {
     color: var(--color-primary);
@@ -160,7 +210,34 @@ img {
         margin-bottom: 2rem;
     }
 
+    article {
+        border-left: none;
+    }
+
     #article {
         margin: auto;
+    }
+
+    #articles article {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: left;
+        align-items: start;
+    }
+
+    #articles .date,
+    #articles article p  {
+        margin: 0 0 -.5rem 0;
+        padding: 0;
+        padding-left: .5rem;
+
+    }
+
+    #articles .date {
+        font-size: .8rem;
+    }
+
+    article:hover {
+        padding-left: 0;
     }
 }
