--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -151,8 +151,8 @@ img {
     padding: .5rem 0;
     width: 70%;
     margin: auto;
-    border: dotted 1px var(--color-secondary);
-    box-shadow: -5px 5px 0 var(--color-menu);
+    border: dotted 1px var(--color-primary);
+    box-shadow: -5px 5px 0 var(--color-secondary);
     margin-bottom: 1.5rem !important;
     transition: all .3s ease-in;
 }
