--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ a {text-decoration: none;}
 body {background-color: var(--color-bg)}
 hr {max-width: 97vw !important;}
 .link {color: var(--color-primary);}
+.link:hover {color: var(--color-secundary);}
 
 /* topbar
 *******/
