--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,9 @@ a {text-decoration: none;}
 body {background-color: var(--color-bg)}
 hr {max-width: 97vw !important;}
 .link {color: var(--color-primary);}
-.link:hover {color: var(--color-secundary);}
+.link:hover {
+    color: var(--color-secundary);
+    font-size: 2rem}
 
 /* topbar
 *******/
