--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {background-color: var(--color-bg)}
 hr {max-width: 97vw !important;}
 .link {color: var(--color-primary);}
 .link:hover {
-    color: var(--color-secundary);
+    color: var(--color-bg);
     font-size: 2rem}
 
 /* topbar
