--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -39,6 +39,15 @@
     width: 100%;
 }
 
+#side-bar ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    list-style: none;
+    margin: 1rem 0 0.3rem;
+}
+
 @keyframes hr {
     to {
         width: 100%;
@@ -101,18 +110,25 @@ article .date {
 }
 
 #article .topic-h1{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 700;
     margin-bottom: .8rem;
+    text-align: center;
 }
 
 #article .topic-h2 {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 700;
     margin: .6rem 0;
 }
 
 #article .topic-h3 {
+    font-size: 1.1rem;
+    font-weight: 700;
+    margin: .6rem 0;
+}
+
+#article .topic-h4 {
     font-size: 1rem;
     font-weight: 700;
     margin: .6rem 0;
@@ -121,6 +137,12 @@ article .date {
 #article ul,
 #article ol {
     margin-left: 2rem;
+}
+
+#article p {
+    text-indent: 1rem;
+    line-height: 130%;
+    margin-bottom: 0.4rem;
 }
 
 .two-column {
