--- a/css/style-all.css
+++ b/css/style-all.css
@@ -32,17 +32,17 @@ p {
     line-height: 130%;
     /*text-indent: 0.6rem;*/
     margin-bottom: 0.7rem;
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
     color: var(--color-text);
 }
 
-h1 {font-size: 1.5;}
-h2 {font-size: 1.4;}
-h3 {font-size: 1.3;}
-h4 {font-size: 1.2;}
+h1 {font-size: 1.4rem;}
+h2 {font-size: 1.3rem;}
+h3 {font-size: 1.2rem;}
+h4 {font-size: 1.1rem;}
 
 .button {
     padding: .2rem .3rem;
