--- a/css/style-all.css
+++ b/css/style-all.css
@@ -123,7 +123,7 @@ h4 {font-size: 1.1rem;}
 }
 
 #welcome img {
-    width: 20%;
+    width: 30%;
     border-radius: 30%;
 }
 
@@ -156,12 +156,12 @@ section .title-article:hover {
 /**Footer
 */
 footer {
-    margin: 1rem 0 2rem;
+    margin: 1rem auto 2rem;
+    max-width: 90vw;
 }
 
 footer ul {
     margin-top: .3rem;
-    padding-left: .3rem;
 }
 
 footer li {
