--- a/css/style-all.css
+++ b/css/style-all.css
@@ -116,7 +116,7 @@ h4 {font-size: 1.1rem;}
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 800px;
     max-width: 90vw;
@@ -179,12 +179,11 @@ footer li {
     line-height: 135%
 }
 
-@media screen and (max-width 800px){
+@media only screen and (max-width 800px){
      /**Welcome
      */
     #welcome {
         flex-direction: column;
-        justify-content: center;
     }
 
     #welcome img {
