--- a/css/style-all.css
+++ b/css/style-all.css
@@ -66,7 +66,7 @@ h4 {font-size: 1.1rem;}
     padding-top: 1rem;
     max-width: 90vw;
     margin: 0 auto;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
 }
 
 #navbar, #navbar ul {
@@ -77,7 +77,7 @@ h4 {font-size: 1.1rem;}
 }
 
 #navbar #logo {
-    color: var(--color-text);
+    color: var(--color-lux);
 }
 
 #navbar button {
