--- a/css/style-all.css
+++ b/css/style-all.css
@@ -67,7 +67,7 @@ h4 {font-size: 1.1rem;}
     max-width: 90vw;
     margin: 0 auto;
     font-size: 1.6rem;
-    color: var(--color-lux);
+    color: var(--color-lux) !important;
 }
 
 #navbar, #navbar ul {
