--- a/css/style-all.css
+++ b/css/style-all.css
@@ -86,7 +86,7 @@ h4 {font-size: 1.1rem;}
     border-color: var(--color-lux);
 }
 
-#navbar i, #logo {
+#navbar i, #navbar a, #navbar h3 {
     color: var(--color-lux);
 }
 
