--- a/css/style-all.css
+++ b/css/style-all.css
@@ -66,6 +66,7 @@ h4 {font-size: 1.1rem;}
     padding-top: 1rem;
     max-width: 90vw;
     margin: 0 auto;
+    position: fixed;
 }
 
 #navbar, #navbar ul {
