--- a/css/style-all.css
+++ b/css/style-all.css
@@ -138,7 +138,7 @@ main p {
     color: var(--color-lux);
 }
 
-main section {
+main article {
     display: flex;
     flex-direction: row;
     gap: 2rem;
@@ -146,6 +146,45 @@ main section {
 
 section .title-article:hover {
     padding-left: .5rem;
+}
+
+/** Post
+*/
+#post {
+    margin-top: 2rem;
+}
+
+
+#post p {
+    color: var(--color-text);
+    text-indent: .6rem;
+    line-height: 135%
+}
+
+#post h1 {
+    margin: 1.2rem 0 1rem;
+}
+
+#post h2 {
+    margin: 1rem 0 .6rem;
+}
+
+#post figure {
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: .6rem 
+}
+
+#post figure img {
+    max-width: 100%;
+}
+
+#post figcaption {
+    margin-top: .3rem;
+    color: var(--color-text);
+    font-size: .8rem;
 }
 
 /**Footer
@@ -165,20 +204,8 @@ footer li {
     color: var(--color-text);
 }
 
-/** Post
-*/
-#post {
-    margin-top: 2rem;
-}
 
-
-#post p {
-    color: var(--color-text);
-    text-indent: .6rem;
-    line-height: 135%
-}
-
-@media only screen and (max-width 800px){
+@media screen and (max-width: 800px){
      /**Welcome
      */
     #welcome {
