--- a/css/style-all.css
+++ b/css/style-all.css
@@ -219,6 +219,7 @@ footer li {
     /**Post
     */
     #post {
-        max-width: 90vw;
+        max-width: 95vw;
+        margin: auto;
     }
 }
