--- a/css/style-all.css
+++ b/css/style-all.css
@@ -111,8 +111,7 @@ h4 {font-size: 1.1rem;}
     gap: 1rem;
     justify-content: center;
     align-items: center;
-    width: 800px;
-    max-width: 90vw;
+    max-width: 100%;
     margin: 3rem auto;
 }
 
