--- a/css/style-all.css
+++ b/css/style-all.css
@@ -127,7 +127,7 @@ h4 {font-size: 1.1rem;}
 /**Main: Arquivos
 */
 main {
-    max-width: 90vw;
+    max-width: 100%;
     margin: 0 auto;
 }
 
@@ -208,23 +208,49 @@ footer li {
 
 
 @media screen and (max-width: 800px){
-
-
-    
-     /**Welcome
-     */
-    #welcome {
-        flex-direction: column;
-    }
-
-    #meimg {
-        width: 70%;
-    }
-
-    /**Post
-    */
-    #post, #bibliography {
+    body {
         max-width: 95vw;
-        margin: auto;
+    }
+    
+    /**NavBar
+    */
+
+    #navbar {
+        max-width: 100%
+        margin: 0 auto;
+    }
+
+    #navbar, #navbar ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    /**Welcome
+    */
+    #welcome {
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+    }
+    
+    #meimg {
+        width: 50%;
+    }
+    
+    #welcome div {
+        max-width: 100%;
+    }
+    
+    /**Main: Arquivos
+    */
+    
+    main article {
+        gap: .2rem;
+    }
+    
+    section .title-article:hover {
+        padding-left: 0rem;
     }
 }
