--- a/css/style-all.css
+++ b/css/style-all.css
@@ -256,6 +256,8 @@ footer li {
 
     article .data {
         width: max-content;
+         display: flex;
+        flex-wrap: nowrap;
     }
     
 }
