--- a/css/style-all.css
+++ b/css/style-all.css
@@ -150,6 +150,10 @@ section .title-article:hover {
     padding-left: .5rem;
 }
 
+.publi {
+    width: 100%;
+}
+
 /** Post
 */
 #post {
@@ -254,9 +258,9 @@ footer li {
         padding-left: 0rem;
     }
 
-    article .data {
-        width: max-content;
-         display: flex;
+    .publi .data {
+        width: fit-content;
+        display: flex;
         flex-wrap: nowrap;
     }
     
