--- a/css/style-all.css
+++ b/css/style-all.css
@@ -259,9 +259,7 @@ footer li {
     }
 
     .publi .data {
-        width: fit-content;
-        display: flex;
-        flex-wrap: nowrap;
+        max-width: min-content;
     }
     
 }
