--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,6 +1,5 @@
 /**NavBar
 */
-
 #navbar {
     padding-top: 1rem;
     margin: 0 auto;
@@ -9,7 +8,7 @@
 #navbar, #navbar ul {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
 }
 #navbar button {
