--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,49 +1,5 @@
-/**NavBar
-*/
-#navbar {
-    padding-top: 1rem;
-}
-
-#navbar, #navbar ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0;
-}
-#navbar button {
-    background-color: transparent;
-    border: 1px dashed transparent;
-    padding: .3rem;
-    cursor: pointer;
-}
-
-#navbar button:hover {
-    border-color: var(--color-lux);
-}
-
-#navbar i, #navbar a, #navbar h3 {
-    color: var(--color-lux);
-    font-size: 1.6rem;
-}
-
-#navbar .fa-mug-hot {
-    font-size: 1.2rem !important;
-    padding: 0 !important;
-}
-
-#navbar li {
-    list-style: none;
-    padding: 0 .1rem;
-}
-
-#navbar a, #navbar i {
-    padding: .3rem;
-    border: 1px dashed transparent;
-}
-
-#navbar a:hover {
-    border-color: var(--color-lux);
+#logo {
+    text-align: left;
 }
 
 /**Welcome
