--- a/css/style-index.css
+++ b/css/style-index.css
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     max-width: 100%;
-    margin: 3rem auto;
+    margin: 3rem auto 0;
 }
 
 #meimg {
