--- a/css/style-post.css
+++ b/css/style-post.css
@@ -12,6 +12,12 @@
     color: var(--color-lux);
 }
 
+#menu {
+    padding: 1rem;
+    margin-top: 2rem;
+    background-color: #00000034;
+}
+
 #post .postTitle {
     font-size: 2.3rem;
     margin: 27vh 0 9vh;
@@ -19,7 +25,7 @@
 
 #post h1 {
     font-size: 1.9rem;
-    margin: 5rem 0 1.5rem;
+    margin: 3rem 0 1.5rem;
 }
 
 #post h2 {
