--- a/css/style-post.css
+++ b/css/style-post.css
@@ -85,6 +85,10 @@
     padding-left: .5rem;
 }
 
+#menu span {
+    line-height: 150%;
+}
+
 @media screen and (max-width: 800px) {
     body {
         max-width: 90vw;
