--- a/css/style-post.css
+++ b/css/style-post.css
@@ -20,11 +20,11 @@
 
 #post .postTitle {
     font-size: 2.3rem;
-    margin-top: 27vh
+    margin: 27vh 0 0;
 }
 
 #post .postSubtitulo {
-    margin-bottom: 9vh;
+    margin: 0 0 9vh;
 }
 
 #post h1 {
